--- a/serverless.yml
+++ b/serverless.yml
@@ -69,6 +69,35 @@ custom:
   restApiRootResourceId:
     dev: /dev
     prod: /
+  models:
+    -
+      name: Type
+      contentType: "application/json"
+      schema:
+        type: object
+        properties:
+          message:
+          type: string
+    -
+      name: Users
+      contentType: "application/json"
+      schema:
+        type: array
+        items:
+          type: object
+          properties:
+            username_phone_email: string
+   -
+      name: UserAssign
+      contentType: "application/json"
+      schema:
+        type: object
+        properties:
+          email:
+          type: string
+          group_name:
+          type: string
+
 
   documentation:
     models:
@@ -87,6 +116,11 @@ functions:
           authorizer: aws_iam
           documentation:
             summary: "Create Company Group"
+            description: "create group for company"
+          methodResponses:
+            -
+             statusCode: '200'
+
 
   CheckIfCompany:
     handler: group.check_if_company
@@ -98,6 +132,13 @@ functions:
           authorizer: arn:aws:cognito-idp:eu-west-1:261650959426:userpool/eu-west-1_w2rC3VeKI
           documentation:
             summary: "Check if Company"
+            description: "check if company"
+          methodResponses:
+            -
+             statusCode: '200'
+             responseModels:
+                "application/json": Type
+
 
   AssignUser:
     handler: group.assign_user
@@ -109,8 +150,15 @@ functions:
           authorizer: arn:aws:cognito-idp:eu-west-1:261650959426:userpool/eu-west-1_w2rC3VeKI
           documentation:
             summary: "Assign User To Group"
+            description: "assign user to group"
             requestModels:
               "application/json": Group
+          methodResponses:
+            -
+             statusCode: '200'
+             requestModels:
+               "application/json": UserAssign
+
 
   DeleteUserFromGroup:
     handler: group.delete_user
@@ -122,9 +170,12 @@ functions:
           authorizer: arn:aws:cognito-idp:eu-west-1:261650959426:userpool/eu-west-1_w2rC3VeKI
           documentation:
             summary: "Delete User From Group"
+            description: "delete user from group"
             requestModels:
               "application/json": Group
-
+          methodResponses:
+            -
+             statusCode: '200'
 
   GetAllUsersCognito:
     handler: group.get_all_users_in_group_cognito
@@ -136,6 +187,11 @@ functions:
           authorizer: arn:aws:cognito-idp:eu-west-1:261650959426:userpool/eu-west-1_w2rC3VeKI
           documentation:
             summary: " Get users for a group in website"
+            description: "get users for a group in website"
+          methodResponses:
+            -
+             statusCode: '200'
+             responseModel: Users
 
   createDriverRegistrationCode:
     handler: driver.save_registration_code
@@ -147,4 +203,6 @@ functions:
           authorizer: arn:aws:cognito-idp:eu-west-1:261650959426:userpool/eu-west-1_w2rC3VeKI
           documentation:
             summary: "create driver registration code"
+            description: "create driver registration code"
+
 
